tests/fixtures/invalid/int_mod_list.py
# Cannot modulo Int and List[int]
x: int = 1 % [1, 2, 3]
